...
      'Enter a valid amount off.': 'Enter a valid amount off.',
      'Enter a valid discount amount.': 'Enter a valid discount amount.',
      'Enter a valid email address.': 'Enter a valid email address.',
      'Enter a valid end date.': 'Enter a valid end date.',
      'Enter a valid percentage off.': 'Enter a valid percentage off.',
      'Enter a valid start date.': 'Enter a valid start date.',
      'Enter mobile number': 'Enter mobile number',
      'Enter phone number': 'Enter phone number',
      'Please enter valid phone number': 'Please enter valid phone number',
      'Enter the maximum discount amount.':
          'Enter the maximum discount amount.',
      'Enter valid 6-digit OTP': 'Enter valid 6-digit OTP',
      'Enter valid price & duration': 'Enter valid price & duration',
...
      'First Name is required & Must start with a capital letter.':
          'First Name is required & Must start with a capital letter.',
      'First Name is required.': 'First Name is required.',
      'First name must start with a capital letter.':
          'First name must start with a capital letter.',
      'Gender': 'Gender',
      'Get Started': 'Get Started',
      'Hair Dresser': 'Hair Dresser',
      'Includes': 'Includes',
      'Inactive': 'Inactive',
      'In Progress': 'In Progress',
      'Inventory': 'Inventory',
      'Item': 'Item',
...
      'LAST VISIT': 'अंतिम विज़िट',
      'LOW STOCK': 'कम स्टॉक',
      'Last Name must be at least 2 characters':
          'अंतिम नाम कम से कम 2 अक्षर का होना चाहिए',
      'Leaves': 'अवकाश',
      'Leaves & Holidays': 'अवकाश और छुट्टियाँ',
      'Login': 'लॉग इन करें',
      'Logout request failed on the server.':
          'सर्वर पर लॉगआउट अनुरोध विफल रहा।',
      'MASTER CATALOG': 'मास्टर कैटलॉग',
      'MOBILE NUMBER': 'मोबाइल नंबर',
      'Main Salon': 'मुख्य सैलून',
      'Manage Services': 'सेवाएँ प्रबंधित करें',
...
      'Validity Date Range': 'वैधता दिनांक सीमा',
      'Vendor': 'विक्रेता',
      'Vendor Status': 'विक्रेता स्थिति',
      'Vendor profile': 'विक्रेता प्रोफ़ाइल',
      'Verify & Continue': 'सत्यापित करें और जारी रखें',
      'Verify OTP': 'ओटीपी सत्यापित करें',
      'Verify Your Number': 'अपना नंबर सत्यापित करें',
      'View': 'देखना',
      'View All': 'सभी को देखें',
      'View Schedule': 'शेड्यूल देखें',
      'View Summary Report': 'सारांश रिपोर्ट देखें',
      'View all services': 'सभी सेवाएँ देखें',
      'View live status': 'लाइव स्थिति देखें',
...
